crates/decorous-frontend/src/snapshots/decorous_frontend__nom_parser__tests__can_parse_attribute-2.snap
---
source: crates/decorous-frontend/src/nom_parser.rs
expression: attribute(input)
---
Ok(
    (
        "",
        EventHandler(
            EventHandler {
                event: "click",
                expr: MODULE@0..12
                  EXPR_STMT@0..12
                    ARROW_EXPR@0..12
                      PARAMETER_LIST@0..2
                        L_PAREN@0..1 "("
                        R_PAREN@1..2 ")"
                      WHITESPACE@2..3 " "
                      FAT_ARROW@3..5 "=>"
                      WHITESPACE@5..6 " "
                      ASSIGN_EXPR@6..12
                        NAME_REF@6..7
                          IDENT@6..7 "x"
                        WHITESPACE@7..8 " "
                        PLUSEQ@8..10 "+="
                        WHITESPACE@10..11 " "
                        LITERAL@11..12
                          NUMBER@11..12 "1"
                ,
            },
        ),
    ),
)
