crates/decorous-frontend/src/snapshots/decorous_frontend__nom_parser__tests__can_parse_attribute-3.snap
---
source: crates/decorous-frontend/src/nom_parser.rs
expression: attribute(input)
---
Err(
    Error(
        Error {
            input: "\"wrong\"",
            code: Tag,
        },
    ),
)
