crates/decorous-frontend/src/snapshots/decorous_frontend__nom_parser__tests__can_parse_elements-4.snap
---
source: crates/decorous-frontend/src/nom_parser.rs
expression: element(input)
---
Err(
    Failure(
        Error {
            input: "",
            code: Tag,
        },
    ),
)
