crates/decorous-frontend/src/snapshots/decorous_frontend__nom_parser__tests__can_parse_elements-6.snap
---
source: crates/decorous-frontend/src/nom_parser.rs
expression: element(input)
---
Ok(
    (
        "",
        Element {
            tag: "div",
            attrs: [],
            children: [
                Node {
                    metadata: Location {
                        start: 0,
                        end: 0,
                    },
                    node_type: Element(
                        Element {
                            tag: "li",
                            attrs: [],
                            children: [],
                        },
                    ),
                },
            ],
        },
    ),
)
